footer: [bugfix] resolve extra padding in .multi-column

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -6,6 +6,7 @@
 .multi-column {
   column-gap: 40px;
   column-count: 2;
+  padding-inline-start: 0px;
 }
 
 /* -- general styling -- */
